Fix broken graphql queries

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!doctype html><html><head><link rel="stylesheet" href="/index.76b71d0b.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body> <div id="root"></div> <script src="/index.ab16f003.js"></script> </body></html>
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<body>
+    <div id="root"></div>
+    <script src="./src/index.tsx"></script>
+</body>
+</html>
