Attempt to let Netlify build dist dir from scratch

--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-<body>
-    <div id="root"></div>
-    <script src="./src/index.tsx"></script>
-</body>
-</html>
+<!doctype html><html><head><link rel="stylesheet" href="/index.a3d8c4ab.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body> <div id="root"></div> <script src="/index.4a1c8251.js"></script> </body></html>
