--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body>
+<body class="flex flex-col min-h-screen">
     <div id="root"></div>
     <script src="./src/index.tsx"></script>
 </body>
