Attempt to fix build js paths on netlify

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 </head>
 <body class="flex flex-col min-h-screen">
     <div id="root"></div>
-    <script src="./src/index.tsx"></script>
+    <script src="./index.tsx"></script>
 </body>
 </html>
