Use REACT_APP_SERVER_URL for action url  on contact form

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body className="flex flex-col min-h-screen">
     <!-- A little help for the Netlify post-processing bots -->
-    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <form name="contact-form" netlify netlify-honeypot="bot-field" hidden>
       <input type="text" name="first_name" />
       <input type="text" name="last_name" />
       <input type="email" name="email" />
